@@ -40,14 +40,14 @@ var command = {
   ExtendPageUp:       function (opt) { return function (app) { app.ui.extendPageUp (); }; },
   DeleteSelected:     function (opt) { return function (app) { app.ui.deleteSelected (); }; },
   ShiftLock:          function (opt) { return function (app) { app.key.lock ('shiftKey'); }; },
-  CtrlLock:          function (opt) { return function (app) { app.key.lock ('ctrlKey'); }; },
-  AltLock:          function (opt) { return function (app) { app.key.lock ('altKey'); }; },
+  CtrlLock:           function (opt) { return function (app) { app.key.lock ('ctrlKey'); }; },
+  AltLock:            function (opt) { return function (app) { app.key.lock ('altKey'); }; },
   ShiftUnlock:        function (opt) { return function (app) { app.key.unlock ('shiftKey'); }; },
-  CtrlUnlock:        function (opt) { return function (app) { app.key.unlock ('ctrlKey'); }; },
-  AltUnlock:        function (opt) { return function (app) { app.key.unlock ('altKey'); }; },
-  ShiftToggleLock:  function (opt) { return function (app) { app.key.togglelock ('shiftKey'); }; },
-  CtrlToggleLock:  function (opt) { return function (app) { app.key.togglelock ('ctrlKey'); }; },
-  AltToggleLock:  function (opt) { return function (app) { app.key.togglelock ('altKey'); }; },
+  CtrlUnlock:         function (opt) { return function (app) { app.key.unlock ('ctrlKey'); }; },
+  AltUnlock:          function (opt) { return function (app) { app.key.unlock ('altKey'); }; },
+  ShiftToggleLock:    function (opt) { return function (app) { app.key.togglelock ('shiftKey'); }; },
+  CtrlToggleLock:     function (opt) { return function (app) { app.key.togglelock ('ctrlKey'); }; },
+  AltToggleLock:      function (opt) { return function (app) { app.key.togglelock ('altKey'); }; },
 
   /* vim setting */
   VisualModeOn:       function (opt) { return function (app) { app.vim.visual.at (1); }; },
