@@ -191,7 +191,7 @@
         <p>A music player on your browser for local files. Made by itchyny.</p>
         <div class="top">Change log</div>
         <p id="changelog">
-        v1.0 (2010/12/28) <br />Publish <br /> <br />v1.1 (2010/12/30) <br />Add a button to add files from dialog <br />Add buttons to pause, play, and play next/preveous file <br />Add a volume controller <br />Allow you to drop files into the whole window (not only into the drop region) <br />Support for ogg files <br /> <br />v1.2 (2011/01/03) <br />Save and resume volume <br />Delete sidebar area on the left <br />Hide audio tag and add the information area on the current file <br /> <br />v1.3 (2011/01/04) <br />Select and manual sort the file list <br />Delete files from the file list with delete key <br />Add some key binding <br /> <br />v1.4x (2011/01/08-) <br />Move the volume controller on the right <br />Fix the bug on click without ctrl key <br />Sort files by filenames <br />Scroll follows the current selection <br />Select the current file by clicking the filename in the information area <br />Shuffle and Repeat play <br />Support for m4a, aac <br />Fix the style in dragging files <br />Fast rendering on setup <br /> <br />v1.5x (2011/02/06-) <br />Shift + Click <br />Color scheme <br />Keyboard Shortcuts with ? key <br />Infomation on this app with F1 key <br />Global keyboard shortcuts <br />ID3v2 tag reader <br />Property with Alt+Enter <br />Support in keyboard shortcuts for Mac users. <br />Filter(Find) with C-F. <br /> <br />v1.6x (2011/11/20-) <br />Support for videos <br />Support for huge size of files <br />Import from a directory <br /> <br />v2.0 (20?? - ) <br />Source code refined <br /> <br /> <br />
+        v1.0 (2010/12/28) <br />Publish <br /> <br />v1.1 (2010/12/30) <br />Add a button to add files from dialog <br />Add buttons to pause, play, and play next/preveous file <br />Add a volume controller <br />Allow you to drop files into the whole window (not only into the drop region) <br />Support for ogg files <br /> <br />v1.2 (2011/01/03) <br />Save and resume volume <br />Delete sidebar area on the left <br />Hide audio tag and add the information area on the current file <br /> <br />v1.3 (2011/01/04) <br />Select and manual sort the file list <br />Delete files from the file list with delete key <br />Add some key binding <br /> <br />v1.4x (2011/01/08-) <br />Move the volume controller on the right <br />Fix the bug on click without ctrl key <br />Sort files by filenames <br />Scroll follows the current selection <br />Select the current file by clicking the filename in the information area <br />Shuffle and Repeat play <br />Support for m4a, aac <br />Fix the style in dragging files <br />Fast rendering on setup <br /> <br />v1.5x (2011/02/06-) <br />Shift + Click <br />Color scheme <br />Keyboard Shortcuts with ? key <br />Infomation on this app with F1 key <br />Global keyboard shortcuts <br />ID3v2 tag reader <br />Property with Alt+Enter <br />Support in keyboard shortcuts for Mac users. <br />Filter(Find) with C-F. <br /> <br />v1.6x (2011/11/20-) <br />Support for videos (avi) <br />Music or videos of large size <br />Import from a directory <br />Watch video in full screen (f key) <br /> <br />v2.0 (20?? - ) <br />Source code refined <br /> <br /> <br />
         </p>
       </div>
       <div id="filter">
